--- a/app/views/1-8-7/dashboard.html
+++ b/app/views/1-8-7/dashboard.html
@@ -40,16 +40,16 @@
     <section class="info">
       <div class="govuk-heading-s no-margin-bottom">Average processing time</div>
       <span class="inline-display">
-        <h3 class="govuk-heading-xl no-margin-bottom govuk-teal"><span id="average">0</span> mins
+        <h3 class="govuk-heading-xl no-margin-bottom govuk-teal"><span id="average">0</span>m 34s
           <text style="color: orange;font-size: 20px">⟷</text>
         </h3>
-        <br><span class="govuk-body-s">9:24:26</span>
+        <br><span class="govuk-body-s">09:24:26</span>
       </span>
-      <span class="inline-display govuk-!-margin-left-9">
-        <h3 class="govuk-heading-xl no-margin-bottom"><span id="average">17</span> mins
+      <span class="inline-display govuk-!-margin-left-5">
+        <h3 class="govuk-heading-xl no-margin-bottom"><span id="average">17</span>m 45s
           <text style="color: red;font-size: 20px">&#9650;</text>
         </h3>
-        <br><span class="govuk-body-s">Last hour  (09:00 to 10:00)</span>
+        <br><span class="govuk-body-s">Last hour</span>
       </span>
     </section>
   </div>
