--- a/app/views/1-8-7/period-end.html
+++ b/app/views/1-8-7/period-end.html
@@ -309,7 +309,7 @@
       </tbody>
     </table>
 <div>
-    <a class="govuk-button enable-continue" id="sendCollectionClosedEmail">
+    <a class="govuk-button govuk-button--disabled enable-continue" id="sendCollectionClosedEmail">
       Send collection closed email
     </a>
 </div>
