--- a/app/views/1-8-7/reference-data-dashboard.html
+++ b/app/views/1-8-7/reference-data-dashboard.html
@@ -54,7 +54,7 @@
                 <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-7">by Kam THANDI</p>
               </li>
               <li>
-                <h3 class="home-services__heading"><a href="validation-messages-20-21" class="govuk-link">Validation messages 20-21</a></h3>
+                <h3 class="home-services__heading"><a href="validation-messages-2021" class="govuk-link">Validation messages 20-21</a></h3>
                 <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1">Last update</p>
                 <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">1 January 2020 at 12:04pm</p>
                 <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-7">by Lynne BURDON</p>
@@ -65,20 +65,20 @@
         <ul class="govuk-list">
           <li>
             <h3 class="home-services__heading">
-              <a href="/browse/benefits" class="govuk-link">Condition of funding removal</a>
+              <a href="condition-of-funding-removal" class="govuk-link">Condition of funding removal</a>
             </h3>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1">Last update</p>
             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">1 January 2020 at 12:04pm</p>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-7">by Bernie ODONNELL</p>
           </li>
           <li>
-            <h3 class="home-services__heading"><a href="/browse/births-deaths-marriages" class="govuk-link">Funding claims provider data</a></h3>
+            <h3 class="home-services__heading"><a href="funding-claims-provider-data" class="govuk-link">Funding claims provider data</a></h3>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1">Last update</p>
             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">1 January 2020 at 12:04pm</p>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-7">by Kam THANDI</p>
           </li>
           <li>
-            <h3 class="home-services__heading"><a href="/browse/business" class="govuk-link">Specialist resources</a></h3>
+            <h3 class="home-services__heading"><a href="specialist-resources" class="govuk-link">Specialist resources</a></h3>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1">Last update</p>
             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">1 January 2020 at 12:04pm</p>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-7">by Lynne BURDON</p>
@@ -100,7 +100,7 @@
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-7">by Bernie ODONNELL</p>
           </li>
           <li>
-            <h3 class="home-services__heading"><a href="validation-messages" class="govuk-link">Validation messages 19-20</a></h3>
+            <h3 class="home-services__heading"><a href="validation-messages-1920" class="govuk-link">Validation messages 19-20</a></h3>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-1">Last update</p>
             <p class="govuk-body govuk-!-font-weight-bold govuk-!-margin-bottom-1">1 January 2020 at 12:04pm</p>
             <p class="govuk-body govuk-!-font-weight-regular govuk-!-margin-bottom-7">by Kam THANDI</p>
