--- a/app/views/1-8-7/ncs-period-end-part-2.html
+++ b/app/views/1-8-7/ncs-period-end-part-2.html
@@ -41,7 +41,8 @@
     <span id="nav">
       <ul class="govuk-list">
         <li>
-          <a href="#reference-data-jobs" class="govuk-link">Period End NCS Summarisation</a><span class="green-dot hidden"></span><span class="govuk-warning-text__icon custom" aria-hidden="true">!</span>
+          <a href="#reference-data-jobs" class="govuk-link">Period End NCS Summarisation</a>
+          <!-- <span class="green-dot hidden"></span><span class="govuk-warning-text__icon custom" aria-hidden="true">!</span> -->
         </li>
         <li>
           <a href="#summarisation" class="govuk-link">Start FCS Handover Email</a>
@@ -63,17 +64,17 @@
       <ul class="app-task-list__items govuk-!-padding-left-0">
         <li class="app-task-list__item">
           Period End NCS Summarisation
-          <span class="govuk-body govuk-!-font-size-16 time-started">Started: 15.40 </span>
+          <!-- <span class="govuk-body govuk-!-font-size-16 time-started">Started: 15.40 </span>
           <div class="flex space-between">
             <span class="govuk-body govuk-!-font-size-16 hide-complete-1">Finished: 16.01</span>
             <span class="hide-complete-1"></span>
-          </div>
+          </div> -->
           <ul class="app-task-list__items govuk-!-padding-left-5 govuk-!-margin-top-2 govuk-!-margin-bottom-2">
             <li>Job Id : 182876, Status : Completed</li>
           </ul>
         </li>
         <li class="app-task-list__item">
-          <span class="govuk-!-font-weight-bold">Start FCS Handover Email</span>
+          <span id="continueState" class="govuk-!-font-weight-bold">Start FCS Handover Email</span>
           <!-- <span class="govuk-body govuk-!-font-size-16 time-started">Started: 15.40 </span>
           <div class="flex space-between">
             <span class="govuk-body govuk-!-font-size-16 hide-complete-1">Finished: 16.01</span>
@@ -84,15 +85,15 @@
           </ul>
           <div><a id="startRound3" href="#" class="govuk-button govuk-button--secondary govuk-!-margin-bottom-2 govuk-!-margin-left-5">Proceed</a></div>
         </li>
-        <li class="app-task-list__item">NCS DEDS Data Extract
+        <li class="app-task-list__item" id="toBeContinued">NCS DEDS Data Extract
           <!-- <div class="flex flex-end"><span class="awaiting awaiting-2">Not started</span><img class="spinner spinner2" src="/public/images/spinner-gif-13.gif" alt=""></div>
           <strong class="govuk-tag app-task-list__task-completed hide-complete-2" id="contact-details-completed">Completed</strong><br class="hide-complete-2"> -->
 
             <img class="spinner spinner2" style="width:5%" src="/public/images/spinner-gif-13.gif" alt="">
             <ul class="app-task-list__items govuk-!-padding-left-5 govuk-!-margin-top-2 govuk-!-margin-bottom-2">
               <li class="govuk-body govuk-!-font-size-19 hide-complete-1">Job Id : 182876, Status : Completed</li>
-              <li class="govuk-body govuk-!-font-size-19 hide-complete-2">Job Id : 182876, Status : Completed</li>
-              <li class="govuk-body govuk-!-font-size-19 hide-complete-3">Job Id : 182876, Status : Completed</li>
+              <li class="govuk-body govuk-!-font-size-19 hide-complete-2">Job Id : 182876, Status : Completed  <img class="spinner spinner3" style="width:5%" src="/public/images/spinner-gif-13.gif" alt=""></li>
+              <li class="govuk-body govuk-!-font-size-19 hide-complete-3">Job Id : 182876, Status : Completed   <img class="spinner spinner4" style="width:5%" src="/public/images/spinner-gif-13.gif" alt=""></li>
             </ul>
           <!-- <div class="flex space-between">
             <span class="govuk-body govuk-!-font-size-16 hide-complete-2"> Finished: 16.07</span>
